Updated frontend and backend. Added password storage component to portal page. Integrated backend functionalities to frontend.

--- a/Frontend/src/styles/portal.css
+++ b/Frontend/src/styles/portal.css
@@ -72,6 +72,10 @@
     margin: 10px 20px;
 }
 
+.category-passwords h5 {
+    margin-top: 30px;
+}
+
 .modal-dialog {
     width: 700px;
     max-width: 100%;
