--- a/Frontend/src/styles/index.css
+++ b/Frontend/src/styles/index.css
@@ -47,7 +47,7 @@ nav a {
   margin: 25px 0px 20px 0px;
 }
 
-.login input, .create-account input {
+.login input, .create-account input, .forgot-password input, .password-reset input {
   width: 360px;
   margin-bottom: 30px;
 }
@@ -60,7 +60,7 @@ nav a {
   margin: auto;
 }
 
-.create-account h2, .forgot-password h2 {
+.create-account h2, .forgot-password h2, .password-reset h2 {
   margin: 25px 0px;
 }
 
@@ -68,10 +68,17 @@ nav a {
   margin-top: 30px;
 }
 
-.forgot-password {
+.forgot-password, .password-reset {
   width: 430px;
-  height: 360px;
+  height: 200px;
   border: 2px solid black;
   border-radius: 30px;
   margin: auto;
+}
+
+.verification, .authentication {
+  width: 150px;
+  height: 50px;
+  text-align: center;
+  font-size: 25px;
 }
