--- a/Frontend/src/styles/index.css
+++ b/Frontend/src/styles/index.css
@@ -10,7 +10,7 @@
 
 body {
   color: black;
-  background-color: white;
+  background-image: linear-gradient(270deg, #70C7F9, #B1ECFA);
 }
 
 h1 {
@@ -35,9 +35,21 @@ nav a {
   margin: 50px 0px;
 }
 
+.alert {
+  width: 100%;
+  position: fixed;
+  z-index: 1;
+  top: 0px;
+}
+
+.alert ul {
+  text-align: left;
+}
+
 .login {
   width: 430px;
   height: 360px;
+  background-color: white;
   border: 2px solid black;
   border-radius: 30px;
   margin: auto;
@@ -55,6 +67,7 @@ nav a {
 .create-account {
   width: 430px;
   height: 585px;
+  background-color: white;
   border: 2px solid black;
   border-radius: 30px;
   margin: auto;
@@ -71,6 +84,7 @@ nav a {
 .forgot-password, .password-reset {
   width: 430px;
   height: 200px;
+  background-color: white;
   border: 2px solid black;
   border-radius: 30px;
   margin: auto;
