--- a/Frontend/src/styles/portal.css
+++ b/Frontend/src/styles/portal.css
@@ -1,6 +1,6 @@
 .portal-navbar {
     width: 100%;
-    background-color: white;
+    background-color: #AEE0FA;
     display: flex;
     justify-content: space-evenly;
     padding: 20px 0px;
@@ -68,12 +68,17 @@
 .category-passwords {
     width: 300px;
     height: 150px;
+    background-color: white;
     border: 1px solid black;
     margin: 10px 20px;
 }
 
 .category-passwords h5 {
-    margin-top: 30px;
+    margin-top: 20px;
+}
+
+.password-storage-buttons, .option-buttons {
+    margin: 0px 15px;
 }
 
 .modal-dialog {
