Updated frontend. Added media queries.

--- a/Frontend/src/styles/password_form.css
+++ b/Frontend/src/styles/password_form.css
@@ -34,8 +34,80 @@
     width: 270px;
 }
 
+textarea {
+    width: 535px;
+    height: 150px;
+}
+
 .password-form-buttons {
     width: 90px;
     height: 45px;
     margin: 30px 30px 0px 30px;
+}
+
+@media only screen and (max-width: 480px) {
+    .password-form {
+        width: 300px;
+        height: 710px;
+    }
+    
+    .password-form .url input {
+        width: 240px;
+    }
+    
+    .password-form .website {
+        margin-right: 0px;
+    }
+    
+    .password-form .website input {
+        width: 240px;
+        margin: 0px 0px 30px 30px;
+    }
+    
+    .category-list {
+        margin: 0px 0px 0px 30px;
+    }
+    
+    .password-form .username input {
+        width: 240px;
+        margin-left: 30px;
+    }
+    
+    .password-form .password input {
+        width: 240px;
+    }
+
+    textarea {
+        width: 260px;
+    }
+}
+
+@media only screen and (max-width: 768px) and (min-width: 481px) {
+    .password-form {
+        width: 470px;
+    }
+    
+    .password-form .url input {
+        width: 420px;
+    }
+    
+    .password-form .website {
+        margin-right: 30px;
+    }
+    
+    .password-form .website input {
+        width: 230px;
+    }
+    
+    .password-form .username input {
+        width: 180px;
+    }
+    
+    .password-form .password input {
+        width: 200px;
+    }
+    
+    textarea {
+        width: 420px;
+    }
 }
