--- a/Frontend/src/styles/profile.css
+++ b/Frontend/src/styles/profile.css
@@ -71,3 +71,79 @@
     height: 45px;
     margin: 70px 30px 30px 30px;
 }
+
+@media only screen and (max-width: 480px) {
+    .profile-form {
+        width: 300px;
+        height: 680px;
+    }
+    
+    .profile-form .last-name {
+        float: left;
+        margin-right: 0px;
+    }
+    
+    .authentication-button {
+        margin: 0px;
+        margin-top: 10px;
+    }
+    
+    .save-changes-button {
+        margin-top: 30px;
+    }
+    
+    .delete-button {
+        margin-top: 50px;
+    }
+
+    .qrcode {
+        width: 300px;
+        height: 300px;
+    }
+}
+
+@media only screen and (max-width: 768px) and (min-width: 481px) {
+    .profile-form {
+        width: 470px;
+        height: 680px;
+    }
+    
+    .profile-form .first-name input {
+        width: 420px;
+    }
+    
+    .profile-form .last-name {
+        float: left;
+        margin-right: 0px;
+    }
+    
+    .profile-form .last-name input {
+        width: 420px;
+    }
+    
+    .profile-form .email input {
+        width: 420px;
+    }
+    
+    .profile-form .password input {
+        width: 420px;
+    }
+    
+    .authentication-button {
+        margin: 0px;
+        margin-top: 10px;
+    }
+    
+    .save-changes-button {
+        margin: 30px 30px 0px 30px;
+    }
+    
+    .delete-button {
+        margin-top: 50px;
+    }
+
+    .qrcode {
+        width: 470px;
+        height: 470px;
+    }
+}
